num:det