@@ -1,19 +1,20 @@
-package palaiologos.kamilalisp.runtime;
+package palaiologos.kamilalisp.runtime.meta;
 
 import palaiologos.kamilalisp.atom.*;
+import palaiologos.kamilalisp.error.InterruptionError;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
-public class Map implements SpecialForm, ReactiveFunction {
+public class ParallelMap implements SpecialForm, ReactiveFunction {
     private final Atom form;
 
     private final int l;
     private final int c;
 
-    public Map(Atom form, int line, int col) {
+    public ParallelMap(Atom form, int line, int col) {
         this.form = form;
         this.l = line;
         this.c = col;
@@ -35,12 +36,12 @@ public class Map implements SpecialForm, ReactiveFunction {
         return new Atom(new Lambda() {
             @Override
             public String stringify() {
-                return Map.this.stringify();
+                return ParallelMap.this.stringify();
             }
 
             @Override
             public String frameString() {
-                return Map.this.frameString();
+                return ParallelMap.this.frameString();
             }
 
             @Override
@@ -52,35 +53,39 @@ public class Map implements SpecialForm, ReactiveFunction {
                     if (args.get(0).getType() != Type.LIST)
                         return new Atom(List.of(Evaluation.evaluate(env, lambda, args)));
                     return new Atom((List<Atom>)
-                            args.get(0).getList().stream().map(x -> Evaluation.evaluate(env, lambda, List.of(x)))
-                                    .collect(Collectors.toCollection(ArrayList::new)));
+                            args.get(0).getList().stream().parallel().map(x -> Evaluation.safeEvaluate(env, lambda, List.of(x), s -> {
+                                System.err.println(s);
+                                throw new InterruptionError();
+                            })).collect(Collectors.toCollection(ArrayList::new)));
                 } else {
                     // zipWith
-                    return new Atom(IntStream.range(0, args.stream().filter(x -> x.getType() == Type.LIST).map(x -> x.getList().size()).filter(x -> x != 1).min(Integer::compareTo).orElse(1))
-                            .mapToObj(index -> Evaluation.evaluate(env, lambda, args.stream().map(x -> x.getType() == Type.LIST ? (x.getList().size() != 1 ? x.getList().get(index) : x.getList().get(0)) : x)
-                                    .collect(Collectors.toCollection(ArrayList::new)))).toList());
+                    return new Atom(IntStream.range(0, args.stream().filter(x -> x.getType() == Type.LIST).map(x -> x.getList().size()).filter(x -> x != 1).min(Integer::compareTo).orElse(1)).parallel()
+                            .mapToObj(index -> Evaluation.safeEvaluate(env, lambda, args.stream().map(x -> x.getType() == Type.LIST ? (x.getList().size() != 1 ? x.getList().get(index) : x.getList().get(0)) : x).collect(Collectors.toList()), s -> {
+                                System.err.println(s);
+                                throw new InterruptionError();
+                            })).toList());
                 }
             }
 
             @Override
             public int line() {
-                return Map.this.line();
+                return ParallelMap.this.line();
             }
 
             @Override
             public int column() {
-                return Map.this.column();
+                return ParallelMap.this.column();
             }
         });
     }
 
     @Override
     public String stringify() {
-        return ":" + form.toString();
+        return "$:" + form.toString();
     }
 
     @Override
     public String frameString() {
-        return ":/syn";
+        return "$:/syn";
     }
 }
